Layout bugfix

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -79,13 +79,17 @@ h2 {
 }
 
 .hero-banner-container {
-  padding: 100px 40px;
+  padding: 10rem 4rem;
   background-color: #dcdcdc;
   border-radius: 15px;
   position: relative;
   height: 500px;
   line-height: 0.9;
   width: 100%;
+  text-align: center;
+  background: url("https://www.tsume-art.com/storage/app/uploads/public/b27/ebc/78b/thumb__1440x500_0_0_crop.png");
+  background-size: cover;
+  filter: blur(0.7px);
 }
 
 .hero-banner-container .beats-solo {
@@ -95,7 +99,7 @@ h2 {
 .hero-banner-container button {
   border-radius: 15px;
   padding: 10px 16px;
-  background-color: #f02d34;
+  background-color: #1d1d1b;
   color: white;
   border: none;
   margin-top: 40px;
@@ -120,28 +124,25 @@ h2 {
 .hero-banner-image {
   position: absolute;
   bottom: 0%;
-  left: 50%;
-  right: calc(50% + 0px);
-  transform: translate(-50%, 0);
-  /* width: 450px; */
+  left: 0%;
   width: auto;
   height: 100%;
   object-fit: contain;
+  border-bottom-left-radius: inherit;
 }
 
 .desc {
   position: absolute;
-  right: 10%;
-  bottom: 5%;
-  width: 300px;
+  right: 5%;
+  bottom: 10%;
   line-height: 1.3;
   display: flex;
   flex-direction: column;
-  color: #324d67;
+  color: #1d1d1b;
 }
 
 .desc p {
-  color: #5f5f5f;
+  color: #1d1d1b;
   font-weight: 100;
   text-align: end;
 }
@@ -168,8 +169,9 @@ h2 {
   height: 400px;
   line-height: 1;
   color: white;
-  width: 100%;
-  margin-top: 120px;
+  width: 95%;
+  max-width: 1400px;
+  margin: 5rem auto;
 }
 
 .banner-desc {
@@ -201,10 +203,8 @@ h2 {
 
 .footer-banner-image {
   position: absolute;
-  /* top: -35%;
-  left: 8%; */
   bottom: 0;
-  left: 25%;
+  left: 18%;
   height: 100%;
   width: auto;
 }
@@ -227,25 +227,6 @@ h2 {
   font-weight: 300;
 }
 
-.cart-wrapper {
-  width: 100vw;
-  background: rgba(0, 0, 0, 0.5);
-  position: fixed;
-  right: 0;
-  top: 0;
-  z-index: 100;
-  /* will-change: transform; */
-  transition: all 1s ease-in-out;
-}
-
-.cart-container {
-  height: 100vh;
-  width: 600px;
-  background-color: white;
-  float: right;
-  padding: 1.5rem 1rem;
-  position: relative;
-}
 
 .footer-container {
   color: #1d1d1b;
@@ -822,11 +803,7 @@ h2 {
   }
 }
 
-// NAVBAR
 @import "./navbar.scss";
-
-// PRODUCT
+@import "./cart.scss";
 @import "./product.scss";
-
-// PRODUCT-DETAILS
 @import "./product-details.scss";
